k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amas
  labels:
    name: amas
    app: amas
    environment: production
